<resources>
    <string name="app_name">2903记账</string>

    <string name="food_and_beverage">餐饮</string>
    <string name="shopping">购物</string>
    <string name="daily">日用</string>
    <string name="the_traffic">交通</string>

    <string name="vegetables">蔬菜</string>
    <string name="fruit">水果</string>
    <string name="snacks">零食</string>
    <string name="movement">运动</string>

    <string name="entertainment">娱乐</string>
    <string name="communication">通讯</string>
    <string name="dress">服饰</string>
    <string name="beauty">美容</string>

    <string name="housing">住房</string>
    <string name="that_occupy_the_home">居家</string>
    <string name="the_child">孩子</string>
    <string name="elders">长辈</string>

    <string name="social">社交</string>
    <string name="travel">旅行</string>
    <string name="alcohol_tobacco">烟酒</string>
    <string name="digital">数码</string>

    <string name="the_car">汽车</string>
    <string name="medical">医疗</string>
    <string name="books">书籍</string>
    <string name="learning">学习</string>

    <string name="pet">宠物</string>
    <string name="the_amounts">礼金</string>
    <string name="gift">礼物</string>
    <string name="office">办公</string>

    <string name="maintenance">维修</string>
    <string name="donation">捐赠</string>
    <string name="lottery">彩票</string>
    <string name="relatives_and_friends">亲友</string>

    <string name="courier">快递</string>

    <string name="wage">工资</string>
    <string name="part_time">兼职</string>
    <string name="financial">理财</string>
    <string name="other">其它</string>

    <string name="mine_saving_need">离下次完成还剩</string>
    <string name="saving_complete">完成次数</string>
    <string name="saving">存钱</string>
    <string name="budget_amount">本月预算</string>
    <string name="budget_remain">剩余预算</string>
    <string name="budget">预算</string>
    <string name="edit_saving">编辑预算</string>
    <string name="remain_amount">剩余预算</string>
    <string name="month_budget">本月预算</string>
    <string name="month_out">本月支出</string>
    <string name="month_in">本月收入</string>
    <string name="saving_manage">存钱管理</string>
    <string name="saving_purpose">存钱目的</string>
    <string name="saving_need">所需金额</string>
    <string name="saving_already">已存金额</string>
    <string name="choose_year_month">请选择年月</string>
    <string name="week">周</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="logo">logo</string>
    <string name="username_ico">username_ico</string>
    <string name="password">Password</string>
    <string name="password_ico">password_ico</string>
    <string name="login">Login</string>
    <string name="register_hint">NO ACCOUNT ? CLICK TO REGISTER</string>
    <string name="personal_back">personal_back</string>
    <string name="personal_info">个人信息</string>
    <string name="head_img">头像</string>
    <string name="username_ch">用户名</string>
    <string name="username">username</string>
    <string name="right_arrow">right_arrow</string>
    <string name="sex">性别</string>
    <string name="password_ch">密码</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="app_icon">app_icon</string>
    <string name="set_budget">设置预算</string>
    <string name="budget_hint">请输入预算金额</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="old_password_hint">请输入原密码:</string>
    <string name="old_password">原密码</string>
    <string name="new_password_hint">请输入新密码:</string>
    <string name="new_password">新密码</string>
    <string name="set_saving">设置存钱</string>
    <string name="saving_amount">存钱金额</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="username_hint">请输入2~16位的用户名</string>
    <string name="direction_hint">请选择去向:</string>
    <string name="direction">去向</string>
    <string name="change">修改</string>
    <string name="delete">删除</string>
    <string name="amount_hint">请输入金额:</string>
    <string name="RMB">元</string>
    <string name="loading">loading…</string>

</resources>
