<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_margin="20dp"
            android:textColor="#000"
            android:textSize="15sp"
            android:text="@string/direction_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <org.angmarch.views.NiceSpinner
            android:id="@+id/detail_more_direction"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_margin="20dp"
            android:textColor="#000"
            android:textSize="15sp"
            android:text="@string/amount_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/detail_more_amount"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/amount_hint"
            android:inputType="number"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/detail_more_change_cancel"
            android:text="@string/cancel"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/detail_more_change_confirm"
            android:text="@string/confirm"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


</LinearLayout>