<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:background="@color/md_yellow_600"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/personal_back"
                android:layout_margin="10sp"
                android:src="@drawable/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/personal_back" />

            <TextView
                android:layout_marginEnd="50sp"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/personal_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_marginTop="50sp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:paddingBottom="5dp"
            android:paddingStart="15dp"
            android:background="@drawable/click_total"
            android:paddingTop="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp"
            android:id="@+id/personal_head"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry">

            <TextView
                android:gravity="center_vertical"
                android:textColor="#000"
                android:textSize="20sp"
                android:text="@string/head_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/personal_head_show"
                android:layout_marginStart="290dp"
                android:layout_gravity="end"
                android:src="@drawable/change_head"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:contentDescription="@string/head_img" />

            <ImageView
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/right"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:contentDescription="@string/right_arrow" />

        </LinearLayout>

        <View
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ff464646"/>

        <LinearLayout

            android:background="@drawable/click_total"
            android:paddingStart="15dp"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="7dp"
            android:id="@+id/personal_username"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:textColor="#000"
                android:textSize="20sp"
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/personal_username_show"
                android:layout_marginTop="2.5dp"
                android:layout_marginLeft="100sp"
                android:textSize="15sp"
                android:gravity="right|center_vertical"
                android:layout_gravity="center_vertical"
                android:layout_width="200sp"
                android:layout_height="match_parent"
                tools:ignore="RtlHardcoded" />

            <ImageView
                android:layout_marginTop="2.5dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/right"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:contentDescription="@string/right_arrow" />

        </LinearLayout>

        <View
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ff464646"/>

        <LinearLayout
            android:background="@drawable/click_total"
            android:paddingStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="7dp"
            android:id="@+id/personal_sex"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_gravity="center_vertical"
                android:textColor="#000"
                android:textSize="20sp"
                android:text="@string/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/personal_sex_show"
                android:layout_marginTop="2.5dp"
                android:layout_marginStart="120sp"
                android:textSize="15sp"
                android:gravity="right|center_vertical"
                android:layout_gravity="center_vertical"
                android:layout_width="200sp"
                android:layout_height="match_parent"
                tools:ignore="RtlHardcoded" />

            <ImageView
                android:layout_marginTop="2.5dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/right"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:contentDescription="@string/right_arrow" />

        </LinearLayout>

        <LinearLayout
            android:background="@drawable/click_total"
            android:paddingStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="7dp"
            android:id="@+id/personal_password"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_gravity="center_vertical"
                android:textColor="#000"
                android:textSize="20sp"
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <ImageView
                android:layout_marginTop="2.5dp"
                android:layout_marginStart="320dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/right"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:contentDescription="@string/right_arrow" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="18.7dp"
                android:layout_marginRight="62dp"
                android:background="@drawable/blue_fill__rounded_color"
                android:gravity="center"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/logout"
                android:textColor="#ffffff"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>