<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:background="@color/md_yellow_600"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/detail_top"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/link_mine"
                android:src="@drawable/link_mine"
                android:layout_marginStart="10sp"
                android:layout_marginBottom="10sp"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:contentDescription="@string/head_img" />

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_marginEnd="40sp"
                    android:textSize="24sp"
                    android:text="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/detail_top"
            android:background="#ff464646"/>

<!--        设置提示信息-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/selectYM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="15sp"
                android:text="@string/choose_year_month"
                android:textColor="#000"
                tools:ignore="RtlSymmetry" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#ff464646" />

            <TextView
                android:gravity="center_horizontal"
                android:id="@+id/income"
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000" />

            <TextView
                android:gravity="center_horizontal"
                android:id="@+id/outcome"
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/detail_yes"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/detailDay_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>